feat(scholarship):添加更新奖学金的功能
